src/test/ui/error-codes/E0308-4.stderr
error[E0308]: mismatched types
  --> $DIR/E0308-4.rs:14:9
   |
LL |         0u8...3i8 => (), //~ ERROR E0308
   |         ^^^^^^^^^ expected u8, found i8

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0308"
